Atualiza .gitattributes para normalizar arquivos SVG

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 
 @theme {
   --color-snow: #f4f1ec;
-  --color-yellow: #fdf156;
+  --color-yellow: #fde047;
   --color-orange: #fdaf15;
   --color-green: #02c877;
   --color-chocolate: #884a3b;
